--- a/styles/main.css
+++ b/styles/main.css
@@ -359,3 +359,35 @@
   background-color: #fff;
   border: 1px solid green;
 }
+
+.pagination {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.paginationInner {
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.paginationBtn {
+  cursor: pointer;
+  padding: 2% 4%;
+  background-color: orangered;
+  color: #fff;
+  border-radius: 10px;
+  border: 1px solid transparent;
+  font-size: medium;
+}
+
+.paginationBtn:hover {
+  background-color: #fff;
+  color: orangered;
+  border: 1px solid orangered;
+}
